--- a/shop.html
+++ b/shop.html
@@ -150,7 +150,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/logo.png" alt="Zekmos Hatchery and Farms">
+            <!-- <img src="img/logo.png" alt="Zekmos Hatchery and Farms"> -->
         </div>
         <nav>
             <ul>
