--- a/home.html
+++ b/home.html
@@ -546,7 +546,7 @@ ul .featured-items {
             <button class="btn btn-secondary" id="showContactFormBtn"> Contact Us</button>
         
             <!-- Contact Form (Initially Hidden) -->
-            <div id="contactFormContainer" style="display: none; margin-top: 20px;">
+            <div id="contactFormContainer" style="display: none; margin-top: 20px;background-color:#ccc">
                 <form action="https://formspree.io/f/mgebznno" method="POST" class="contact" id="contact">
                     <h1>Contact Us</h1>
                     <div class="form-outline mb-4 w-50">
