--- a/home.html
+++ b/home.html
@@ -548,7 +548,7 @@ ul .featured-items {
             <!-- Contact Form (Initially Hidden) -->
             <div id="contactFormContainer" style="display: none; margin-top: 20px;background-color:#ccc">
                 <form action="https://formspree.io/f/mgebznno" method="POST" class="contact" id="contact">
-                    <h1>Contact Us</h1>
+                    <h1 style="color: coral;">Contact Us</h1>
                     <div class="form-outline mb-4 w-50">
                         <input type="text" id="typeText" name="name" class="form-control" required placeholder="Enter Name"/>
                         <!-- <label class="form-label" for="typeText">Enter Name</label> -->
