--- a/home.html
+++ b/home.html
@@ -126,8 +126,8 @@ ul .featured-items {
         .intro {
             text-align: center;
             padding: 10px ;
-            background-color: #0056b3;
-            color: white;
+            background-color: #dce9f7;
+            color: rgb(78, 74, 74);
             margin-top: 15px;
             min-width: 100vmin;
             justify-content: center;
