--- a/home.html
+++ b/home.html
@@ -445,7 +445,7 @@ ul .featured-items {
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"class="active">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="cart.html">Cart</a></li>
                 <!-- <li><a href="services.html">Services</a></li> -->
@@ -546,7 +546,7 @@ ul .featured-items {
             <button class="btn btn-secondary" id="showContactFormBtn"> Contact Us</button>
         
             <!-- Contact Form (Initially Hidden) -->
-            <div id="contactFormContainer" style="display: none; margin-top: 20px;background-color:#ccc">
+            <div id="contactFormContainer" style="display: none; margin-top: 20px;background:none">
                 <form action="https://formspree.io/f/mgebznno" method="POST" class="contact" id="contact">
                     <h1 style="color: coral;">Contact Us</h1>
                     <div class="form-outline mb-4 w-50">
