--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@ ul .featured-items {
         .intro {
             text-align: center;
             padding: 10px ;
-            background-color: #dce9f7;
+            background: none;
             color: rgb(78, 74, 74);
             margin-top: 15px;
             min-width: 100vmin;
