--- a/home.html
+++ b/home.html
@@ -133,7 +133,7 @@ ul .featured-items {
             justify-content: center;
             position: relative;
             margin-left: 20px;
-            
+            overflow: hidden;
         }
 
         .intro h1 {
