--- a/home.html
+++ b/home.html
@@ -969,7 +969,7 @@ ul .featured-items {
         <!--Grid column-->
         <div class="col-auto">
           <!-- Submit button -->
-          <button type="submit" class="btn btn-outline-light mb-4">
+          <button type="submit" class="btn btn-secondary mb-4">
             Subscribe
           </button>
         </div>
