--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ h2{
         <h1 class="mb-3">Zekmos Hatchery and Farms</h1>
         <h2 class="mb-6 text-success"><i>Your trusted hatching partner, <span><br>Hatch your dreams with us</i></span></h2>
         <a class="btn btn-success btn-lg btn1 " href="home.html" role="button">Go to Farms</a>
+        <a class="btn btn-success btn-lg btn1 " href="shop.html" role="button">Stores</a>
         <a class="btn btn-secondary btn-lg btn1" href="https://hatchapp.great-site.net" role="button">Go to Hatchery</a>
       </div>
     </div>
