--- a/order.html
+++ b/order.html
@@ -82,8 +82,8 @@
             <label for="b_name">Business Name (if any)</label>
             <input type="text" id="b_name" name="business_name" />
         </div>
-      
-        <div class="form-submit">
+      <small>Orders are shipped and delivered within 5 working days. <span style="color: coral;">Please Note:</span> Zekmos Shipment Team will contact you for your shipment and delivery process.<hr></small>
+        <div class="form-submit"style="margin-top:10px;">
             <button type="button" onclick="payWithPaystack()">Order now</button>
         </div>
     </form>
