--- a/home.html
+++ b/home.html
@@ -8,10 +8,10 @@
     <meta name="keywords" content="Poultry Hatchery Ghana, Day-old Chicks for Sale, Guinea Keets Supplier, Commercial Hatchery Services, Poultry Breeding Farm, Agricultural Inputs Ghana, Farm Products Supplier, Poultry Feed and Drugs, Incubators for Sale Ghana, Poultry Farming Ghana, Zekmos Hatchery and Farms, Poultry Consultation Services, Brooding Equipment Ghana, Farm Inputs Supplier Ghana, Poultry Health Products, Egg Incubation Services, Guinea Fowl Farming, Agribusiness Ghana, Poultry Equipment Supplier,Hatcher Tamale, Northern Ghana, Agric, farm tamale, UDS Nyankpala,campus,vet, poulty,drugs, eggs, guinea, fowls, chicks,keet, brooding,breeding,candeling,  Farmers Market Ghana,Poultry Hatchery Ghana, Day-old Chicks for Sale, Guinea Keets Supplier, Commercial Hatchery Services, Poultry Breeding Farm, Agricultural Inputs Ghana, Farm Products Supplier, Poultry Feed and Drugs, Incubators for Sale Ghana, Poultry Farming Ghana, Zekmos Hatchery and Farms, Poultry Consultation Services, Brooding Equipment Ghana, Farm Inputs Supplier Ghana, Poultry Health Products, Egg Incubation Services, Guinea Fowl Farming, Agribusiness Ghana, Poultry Equipment Supplier, Farmers Market Ghana,poultry, hatching services, day-old chicks, guinea keets, incubators, farm supplies, Ghana">
     <meta name="author" content="Zekmos Hatchery and Farms">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet"> -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" /> -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" /> 
     <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" /> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" /> 
     <!-- MDB-->
     <!-- <link rel="stylesheet" href="css/mdb.min.css" /> -->
     <title>Zekmos Hatchery and Farms</title>
@@ -614,7 +614,7 @@ ul .featured-items {
     <div class="intro">
         <h1>Welcome to Zekmos Hatchery and Farms</h1>
         <p>Your one-stop destination for poultry products, hatching services, and farm supplies in Ghana.</p><br>
-        <small class="info">Our main area of business is poultry hatching, breeding, and the sale of poultry birds, with a special focus on guinea fowls. The company also deals in the supply of agricultural inputs, including day-old chicks, turkeys, poultry drugs, feeders, drinkers, and other related poultry and crop products. Additionally, Zekmos Hatchery and Farms offers commercial hatchery services to both large-scale and backyard farmers in the poultry industry.We also sell sophysiticated computer controlled incubators of all sizes and capacities. <h3>Start your own hatcher <a href="https://hatchapp.great-site.net/?i=1" style="color:#fff;">Today !</a> </h3> </small><br><br>
+        <small class="info">Our main area of business is poultry hatching, breeding, and the sale of poultry birds, with a special focus on guinea fowls. The Farm also deals in the supply of agricultural inputs, including day-old chicks, turkeys, poultry drugs, feeders, drinkers, and other related poultry and crop products. Additionally, Zekmos Hatchery and Farms offers commercial hatchery services to both large-scale and backyard farmers in the poultry industry.We also sell sophysiticated computer controlled incubators of all sizes and capacities. <h3 style="margin-top: 10px;">Start your own hatching Business <a href="https://hatchapp.great-site.net/?i=1" class="btn btn-secondary">Today !</a> </h3> </small><br><br>
         <a href="shop.html" class="btn btn-success"> Go to Shop</a> 
         
 
@@ -644,14 +644,7 @@ ul .featured-items {
       </div>
   </div>
   
-  <!-- <script>
-      // JavaScript to toggle the visibility of the contact form
-      document.getElementById('showContactFormBtn').addEventListener('click', function() {
-          var contactFormContainer = document.getElementById('contactFormContainer');
-          contactFormContainer.style.display = (contactFormContainer.style.display === "none") ? "block" : "none";
-      });
-  </script> -->
-  
+ 
   
     <div class="content">
         <a href="#users-comments">What our clients say about Us</a>
@@ -913,6 +906,7 @@ ul .featured-items {
 
     <div class="comment-area">
         <div class="users-comments" id="users-comments">
+            <h3>Comment or Rate us.</h3>
             <div class="comment-form">
                 <label for="username">Name:</label>
                 <input type="text" id="username" placeholder="Enter your name">
