--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <link rel="icon" href="img/chicking.jpeg" type="image" />
     <title>Zekmos Hatchery and Farms</title>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5SZR5559');</script>
+  <!-- End Google Tag Manager -->
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <!-- Google Fonts Roboto -->
@@ -81,6 +88,10 @@ h2{
     </style>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SZR5559"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <div class="top"><img src="logo_icon.png" alt="" class="logo "> <img src="logo1.png" alt="" class="log logo1"> </div>
     <div class="index">
       
