--- a/shop.html
+++ b/shop.html
@@ -11,6 +11,13 @@
     <meta property="og:image" content="images/shop-preview.jpg">
     <meta property="og:url" content="https://yourusername.github.io/repository-name/shop.html">
     <meta property="og:type" content="website">
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5SZR5559');</script>
+    <!-- End Google Tag Manager -->
     <title>Shop - Zekmos Hatchery and Farms</title>
     <link rel="stylesheet" href="css/inde.css">
     <style>
@@ -253,6 +260,10 @@
     </style>
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SZR5559"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header>
         <div class="logo">
             <!-- <img src="img/logo.png" alt="Zekmos Hatchery and Farms"> -->
@@ -268,6 +279,7 @@
     </header>
 
     <main>
+        <div style="text-align: center;margin: 20px;"><h2><a href="order22.html" class="btn btn-success">Pre-order</a></h2></div>
         <div class="container">
             <section class="product-list" id="product-list">
                 <!-- Products will be loaded here dynamically -->
