--- a/home.html
+++ b/home.html
@@ -1291,7 +1291,9 @@ function clearForm() {
           resultDiv.innerHTML = `Lockdown date for your eggs are: <strong>${formattedLockdownDate}</strong>`;
       }
       </script>
-      
+     <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/146038761.js"></script>
+<!-- End of HubSpot Embed Code --> 
 </body>
 
 </html>
