--- a/shop.html
+++ b/shop.html
@@ -294,5 +294,8 @@
 
     <script src="js/products.js"></script>
     <script src="js/main.js"></script>
+    <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/146038761.js"></script>
+<!-- End of HubSpot Embed Code -->
 </body>
 </html>
