--- a/index.html
+++ b/index.html
@@ -1,5 +1,312 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Browse our selection of poultry products and hatching services at Zekmos Hatchery and Farms.">
+    <meta name="keywords" content="shop, poultry products, hatching services, day-old chicks, guinea keets, incubators, farm supplies">
+    <meta name="author" content="Zekmos Hatchery and Farms">
+    <meta property="og:title" content="Shop - Zekmos Hatchery and Farms">
+    <meta property="og:description" content="Explore our wide range of poultry products and services.">
+    <meta property="og:image" content="images/shop-preview.jpg">
+    <meta property="og:url" content="https://yourusername.github.io/repository-name/shop.html">
+    <meta property="og:type" content="website">
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5SZR5559');</script>
+    <!-- End Google Tag Manager -->
+    <title>Shop - Zekmos Hatchery and Farms</title>
+    <link rel="stylesheet" href="css/inde.css">
+    <style>
+        /* Reset some basic elements */
+        body, h1, h2, h3, p, ul, li, img {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: sans-serif;
+            font-size: small;
+            justify-content: center;
+            text-decoration: none;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f9f9f9;
+            height: 100vh;
+        }
+
+        header {
+            background-color: #fff;
+            border-bottom: 1px solid #ddd;
+            padding: 15px 0;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            display: flex;
+            margin: 0px;
+            justify-content: space-around;
+        }
+
+        .logo img {
+            width: 80px;
+            margin: 0px 40px;
+            border-radius: 50%;
+            display: inline;
+            text-align: center;
+        }
+
+        nav {
+            float: right;
+            margin-right: 20px;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+        }
+
+        nav ul li {
+            margin-left: 15px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #333;
+            padding: 10px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        nav ul li a:hover, nav ul li a.active {
+            background-color: #4CAF50;
+            color: #fff;
+        }
+
+        main {
+            flex: 1;
+            padding: 20px 10px 20px;
+        }
+
+        .container {
+            max-width: 100vw;
+            margin: 20px 10px;
+            height: 100%;
+            margin-top: 0;
+            margin-bottom: 50px;
+        }
+
+        .category {
+            margin-bottom: 20px;
+        }
+
+        .category h2 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+            color: #333;
+        }
+
+        .product-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 25px;
+        }
+
+        .product-item {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            overflow: hidden;
+            transition: transform 0.3s, box-shadow 0.3s;
+            position: relative;
+        }
+
+        .product-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .product-item img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+        }
+
+        .details {
+            padding: 15px;
+            text-align: center;
+        }
+
+        .details h3 {
+            font-size: 0.8rem;
+            margin-bottom: 10px;
+            color: #333;
+        }
+
+        .details p {
+            margin-bottom: 15px;
+            color: #666;
+            font-size: 0.6rem;
+        }
+
+        .details .price {
+            font-size: 0.7rem;
+            color: #4CAF50;
+            font-weight: bold;
+        }
+
+        .badge {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 3px 10px;
+            border-radius: 3px;
+            color: #fff;
+            font-size: 0.7rem;
+        }
+
+        .sold {
+            background-color: #FF0000;
+            font-weight: bold;
+        }
+
+        .in-stock {
+            background-color: #4CAF50;
+        }
+
+        .alert-message {
+            background-color: #4CAF50;
+            color: white;
+            padding: 15px;
+            margin-bottom: 20px;
+            text-align: center;
+            border-radius: 5px;
+            position: fixed;
+            top: 80px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 20%;
+            z-index: 1000;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Button styles */
+        .btn {
+            padding: 8px 15px;
+            border: none;
+            border-radius: 5px;
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+            font-size: 0.8rem;
+            transition: background-color 0.3s, transform 0.2s;
+        }
+
+        .btn:hover {
+            background-color: #45a049;
+            transform: translateY(-2px);
+        }
+
+        .btn:active {
+            transform: translateY(0);
+        }
+
+        .btn[disabled] {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+
+        .loading {
+            display: inline-block;
+            width: 15px;
+            height: 10px;
+            border: 3px solid #ccc;
+            border-top-color: #4CAF50;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        .cart-buttons {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .go-to-cart {
+            background-color: #f39c12;
+            padding: 10px 20px;
+            border-radius: 5px;
+            color: white;
+            text-decoration: none;
+            font-size: 0.8rem;
+            text-decoration: none;
+            transition: background-color 0.3s, transform 0.2s;
+        }
+
+        .go-to-cart:hover {
+            background-color: #e67e22;
+            transform: translateY(-2px);
+        }
+    </style>
+</head>
+<body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SZR5559"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <header>
+        <div class="logo">
+            <!-- <img src="img/logo.png" alt="Zekmos Hatchery and Farms"> -->
+        </div>
+        <nav>
+            <ul>
+                <li><a href="shop.html">Home</a></li>
+                <li><a href="index.html" class="active">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="cart.html">Cart</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div style="text-align: center;margin: 20px;"><h2><a href="order22.html" class="btn btn-success">Optional-order</a></h2></div>
+        <div class="container">
+            <section class="product-list" id="product-list">
+                <!-- Products will be loaded here dynamically -->
+            </section>
+           
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Zekmos Hatchery and Farms. All rights reserved.</p>
+    </footer>
+
+    <script src="js/products.js"></script>
+    <script src="js/main.js"></script>
+    <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/146038761.js"></script>
+<!-- End of HubSpot Embed Code -->
+</body>
+</html>
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -124,3 +431,4 @@ h2{
     </script>
   </body>
 </html>
+ -->
