--- a/shop.html
+++ b/shop.html
@@ -271,8 +271,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html" class="active">Shop</a></li>
-                <li><a href="home.html#contactFormContainer">Contact</a></li>
+                <li><a href="index.html" class="active">Shop</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
