--- a/shop.html
+++ b/shop.html
@@ -270,8 +270,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html" class="active">Shop</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Shop</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cart.html">Cart</a></li>
             </ul>
