--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="shop.html">Home</a></li>
-                <li><a href="index.html" class="active">About</a></li>
+                <li><a href="shop.html" class="active">Home</a></li>
+<!--                 <li><a href="index.html">About</a></li> -->
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cart.html">Cart</a></li>
             </ul>
